# kokoro

./: .gitignore  README.md  pyproject.toml
notebooks/bitlinear/: test.ipynb
scripts/: train_tinystories.py
scripts/data/: __init__.py  tinystories.py
src/kokoro/: __init__.py  blocks.py  fn.py  layers.py  model.py  recursive.py  train.py
